# CPO_life_is_long_no_python_please

./: CHANGELOG.md  README.md  test-project.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: BST.hs
test/: PBT.hs  Tests.hs
